<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/result_signin"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="Sign In"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/usernameicon"
        android:drawablePadding="7dp"
        android:hint="Username"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textCursorDrawable="@drawable/edittext_cursorcolor"
        android:textSize="16dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bottom_line"
        android:drawableLeft="@drawable/passwordicon"
        android:drawablePadding="7dp"
        android:hint="Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textCursorDrawable="@drawable/edittext_cursorcolor"
        android:textSize="16dp" />


    <LinearLayout
        android:id="@+id/layout_signin"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_signin"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="Sign In"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="Create Account"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="5dp"
            android:text="Forgot Password"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:textStyle="normal" />


    </LinearLayout>

</LinearLayout>